@@ -1,9 +1,11 @@
 import androidx.compose.animation.AnimatedVisibility
 import androidx.compose.foundation.Image
 import androidx.compose.foundation.layout.Column
+import androidx.compose.foundation.layout.fillMaxSize
 import androidx.compose.foundation.layout.fillMaxWidth
 import androidx.compose.foundation.layout.padding
 import androidx.compose.material.Button
+import androidx.compose.material.Surface
 import androidx.compose.material.Text
 import androidx.compose.runtime.*
 import androidx.compose.ui.Alignment
@@ -27,22 +29,25 @@ import zealotry.composeapp.generated.resources.compose_multiplatform
 fun App() {
     PreComposeApp {
         MainTheme {
-            var showContent by remember { mutableStateOf(false) }
-            val greeting = remember { Greeting().greet() }
-            Column(Modifier.fillMaxWidth(), horizontalAlignment = Alignment.CenterHorizontally) {
-                val vm = koinViewModel(CalendarViewModel::class)
-                CalendarFragment(vm)
-                Button(onClick = { showContent = !showContent }) {
-                    Text("Click me!")
-                }
-                AnimatedVisibility(showContent) {
-                    Column(
-                        Modifier.fillMaxWidth(), horizontalAlignment = Alignment.CenterHorizontally
-                    ) {
-                        Image(painterResource(Res.drawable.compose_multiplatform), null)
-                        Text("Compose: $greeting")
-                    }
-                }
+//            var showContent by remember { mutableStateOf(false) }
+//            val greeting = remember { Greeting().greet() }
+//            Column(Modifier.fillMaxWidth(), horizontalAlignment = Alignment.CenterHorizontally) {
+//                val vm = koinViewModel(CalendarViewModel::class)
+//                CalendarFragment(vm)
+//                Button(onClick = { showContent = !showContent }) {
+//                    Text("Click me!")
+//                }
+//                AnimatedVisibility(showContent) {
+//                    Column(
+//                        Modifier.fillMaxWidth(), horizontalAlignment = Alignment.CenterHorizontally
+//                    ) {
+//                        Image(painterResource(Res.drawable.compose_multiplatform), null)
+//                        Text("Compose: $greeting")
+//                    }
+//                }
+//            }
+            Surface(modifier = Modifier.fillMaxSize()) {
+                Navigation()
             }
         }
     }
